Bug 1664433 - Explicitly include Sprintf.h in RemoteWorkerManager.cpp to fix build error on ppc64le/s390x platforms. r=asuth,dom-workers-and-storage-reviewers

Differential Revision: https://phabricator.services.mozilla.com/D90263